--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 
-<h1 style="text-align:center">TheCodingTurtle Website (plz sub)</h1>
+<h1 style="text-align:center; font-family:Arial;">TheCodingTurtle Website (plz sub)</h1>
