--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>TheCodingTurtle</title>
 </head>
 <body>
-
+    <div class="header">
+        <h1>Header</h1>
+        <p>My supercool header</p>
+    </div>
 </body>
 </html>
