--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <title>Page Title</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>TheCodingTurtle</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
     <div class="header">
         <h1>Header</h1>
         <p>My supercool header</p>
     </div>
+
+    <div class="content">
+        <h1>Content</h1>
+        <p>Some content blablabla, some content blablabla.</p>
+        <p>Some content blablabla, some content blablabla.</p>
+        <p>Some content blablabla, some content blablabla.</p>
+    </div>
+
 </body>
 </html>
