--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
     <title>Page Title</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Style the body */
+        body {
+            font-family: Arial;
+            margin: 0;
+        }
+
+        /* Header/Logo Title */
+        .header {
+            padding: 60px;
+            text-align: center;
+            background: #1abc9c;
+            color: white;
+            font-size: 30px;
+        }
+
+        /* Page Content */
+        .content {
+            padding: 20px;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
