--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ body {
 }
 
 /* Page Content */
-.content {padding:20px;}
+.content {
+  padding:20px;
+}
 </style>
 </head>
 <body>
@@ -31,7 +33,7 @@ body {
   <p>My supercool header</p>
 </div>
 
-<div class="content">
+<div>
   <h1>Content</h1>
   <p>Some content blablabla, some content blablabla.</p>
   <p>Some content blablabla, some content blablabla.</p>
