--- a/index.html
+++ b/index.html
@@ -28,19 +28,12 @@ body {
 </head>
 <body>
 
+  <h1>wowo</h1>
+  
 <div class="header">
   <h1>Header</h1>
   <p>My supercool header</p>
 </div>
-
-  <br>
-  <br>
-  <br>
-
- <h1>Content</h1>
- <p>Some content blablabla, some content blablabla.</p>
- <p>Some content blablabla, some content blablabla.</p>
- <p>Some content blablabla, some content blablabla.</p>
 
 
 </body>
