--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
-}
+    <title>Page Title</title>
+    <meta charset="UTF-8">
+    <style>
+        /* Style the body */
+        body {
+            font-family: Arial;
+            margin: 0;
+        }
 
-/* Header/Logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
-  position: relative;
-}
+        /* Header/Logo Title */
+        .header {
+            padding: 60px;
+            text-align: center;
+            background: #1abc9c;
+            color: white;
+            font-size: 30px;
+        }
 
-/* Page Content */
-.content {
-  padding:20px;
-}
-</style>
+        /* Page Content */
+        .content {
+            padding: 20px;
+        }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  
-<div class="header">
-  <h1>Header</h1>
-  <p>My supercool header</p>
-  <h1>no</h1>
-</div>
-  
-  <h1>esahdasjhdksa</h1>
 
+    <div class="header">
+        <h1>TheCodingTurtle</h1>
+        <p>tortle card is epic</p>
+    </div>
+
+    <div class="content">
+        <h1>Content</h1>
+        <p>Some content blablabla, some content blablabla.</p>
+        <p>Some content blablabla, some content blablabla.</p>
+        <p>Some content blablabla, some content blablabla.</p>
+    </div>
 
 </body>
 </html>
