--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             margin: 0;
         }
 
+        p {
+            font-size: 10px;
+        }
+
         /* Header/Logo Title */
         .header {
             padding: 25px;
