--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
 
     <div class="content">
-        <h1>Content</h1>
-        <p>Some content blablabla, some content blablabla.</p>
-        <p>Some content blablabla, some content blablabla.</p>
-        <p>Some content blablabla, some content blablabla.</p>
+        <h1>TurtleCards</h1>
+        <p>TurtleCard 100X</p>
+        <p>TurtleCard 200X</p>
+        <p>TurtleCard 210X (WIP) </p>
     </div>
 
 </body>
