--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             text-align: center;
             background: #1abc9c;
             color: white;
-            font-size: 30px;
+            font-size: auto;
         }
 
         /* Page Content */
         .content {
-            padding: 20px;
+            padding: auto;
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
