--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         .content {
             padding: auto;
         }
+        
+        h1 {
+            text-align: center;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
