--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Page Title</title>
+    <title>WIP</title>
     <meta charset="UTF-8">
     <style>
         /* Style the body */
@@ -37,15 +37,8 @@
 <body>
 
     <div class="header">
-        <h1>TheCodingTurtle</h1>
-        <p>tortle card is epic</p>
-    </div>
-
-    <div class="content">
-        <h1>TurtleCards</h1>
-        <p>TurtleCard 100X</p>
-        <p>TurtleCard 200X</p>
-        <p>TurtleCard 210X (WIP) </p>
+        <h1>WIP</h1>
+        <p>should be working in a few days :)</p>
     </div>
 
 </body>
