--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>WIP</title>
-    <meta charset="UTF-8">
-    <style>
-        /* Style the body */
-        body {
-            font-family: Arial;
-            margin: 0;
-        }
-
-        p {
-            font-size: 20px;
-        }
-
-        /* Header/Logo Title */
-        .header {
-            padding: 15px;
-            text-align: center;
-            background: #1abc9c;
-            color: white;
-            font-size: auto;
-        }
-
-        /* Page Content */
-        .content {
-            padding: auto;
-        }
-        
-        h1 {
-            text-align: center;
-        }
-    </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
-    <div class="header">
-        <h1>WIP</h1>
-        <p>should be working in a few days :)</p>
-    </div>
-
-</body>
-</html>
+<a href="tc100x.html">go to turtle card 100x page test</a>
