--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="tc100x.html">go to turtle card 100x page test</a>
+<p>this website is still a WIP</p>
+<p>it should be finished in around a few days.</p>
