--- a/index.html
+++ b/index.html
@@ -1,2 +1,125 @@
-<p>this website is still a WIP</p>
-<p>it should be finished in around a few days.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>TheCodingTurtle</title>
+    <meta charset="UTF-8">
+    <style>
+        /* Style the body */
+        body {
+            font-family: Arial;
+            margin: 0;
+        }
+
+        p {
+            font-size: 20px;
+        }
+
+        /* Header/Logo Title */
+        .header {
+            padding: 15px;
+            text-align: center;
+            background: #1abc9c;
+            color: white;
+            font-size: auto;
+        }
+
+        /* Page Content */
+        .content {
+            padding: auto;
+            text-align: center;
+        }
+        form {
+          padding: auto;
+          text-align: center;
+        }
+        
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+          text-align: center;
+        }
+        button {
+          background-color: white;
+          color: #1abc9c;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 22px;
+          border-radius: 10px;
+          border: 2px solid #1abc9c;
+          transition-duration: 0.4s;
+          box-shadow: 0 9px #999;
+          padding: 45px;
+          margin: 15px;
+        }
+        button:hover {
+          background-color: #1abc9c;
+          color: white;
+          padding: 35px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 22px;
+          border-radius: 10px;
+          border: 2px solid #1abc9c;
+        }
+      .dis:hover {
+         background-color: white;
+          color: #1abc9c;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 22px;
+          border-radius: 10px;
+          border: 2px solid #1abc9c;
+          transition-duration: 0.4s;
+          box-shadow: 0 9px #999;
+          padding: 45px;
+          margin: 15px;
+      }
+        button:active {
+          box-shadow: 0 2px #666;
+          transform: translateY(8px);
+        }
+      .dis {
+          opacity: 0.6;
+          cursor: not-allowed;
+          background-color: white;
+          color: #1abc9c;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 22px;
+          border-radius: 10px;
+          border: 2px solid #1abc9c;
+          transition-duration: 0.4s;
+          box-shadow: 0 9px #999;
+          padding: 45px;
+          margin: 15px;
+      }
+      h4 {
+        margin: 4px;
+      }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+    <div class="header">
+        <h1>TheCodingTurtle</h1>
+        <p>sub for more turtle card</p>
+    </div>
+
+    <div class="content">
+      <h2>Turtle Cards</h2>
+      <button onclick="location.href='tc100x.html';">TurtleCard 100X<h4>31$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078465841961644052/floofo.jpg" width=270 height=350></button>
+      <button>TurtleCard 200X (unfinished)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078474182637129768/PXL_20230211_164327949_1.jpg" width=270 height=350>
+        <button class="dis">TurtleCard 210X (coming soon)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078477996723277884/computer_1.jpg" width=270 height=350>
+        <button class="dis">TurtleCard 220X3D (coming soon)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078477996723277884/computer_1.jpg" width=270 height=350>
+      </button>
+    </div>
+
+</body>
+</html>
