--- a/tc100x.html
+++ b/tc100x.html
@@ -1,1 +1,173 @@
-<h1>Turtle Card 100X</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <style>
+    body {
+      font-family: Arial;
+      margin: 0;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 48px;
+    }
+
+    h3 {
+      text-align: center;
+      margin: 2px;
+    }
+
+    .header {
+      padding: 15px;
+      text-align: center;
+      background: #1abc9c;
+      color: white;
+      font-size: auto;
+    }
+
+    table {
+      border-collapse: collapse;
+      text-align: center;
+      width: 100%;
+    }
+
+    @media only screen and (max-width: 480px) {
+
+      /* horizontal scrollbar for tables if mobile screen */
+      .tablemobile {
+        overflow-x: auto;
+        display: block;
+      }
+    }
+
+    th,
+    td {
+      padding: 8px;
+      text-align: center;
+      border-bottom: 1px solid #DDD;
+    }
+
+    p {
+      font-family: Arial;
+    }
+
+    .content {
+      padding: auto;
+      text-align: center;
+    }
+
+    tr:nth-child(even) {
+      background-color: #D6EEEE;
+    }
+
+    .center {
+      margin: 0px auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header">
+    <h1>Turtle Card 100X</h1>
+    <h3>The first turtle card ever!</h3>
+    <h3>max Resolution of 200x150@60Hz,</h3>
+    <h3>and includes a 512Kb VRAM.</h3>
+  </div>
+  <br>
+  <br>
+  <center><iframe width="560" height="315" text-align="center" src="https://www.youtube.com/embed/ZoZWe-e_1YA"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe></center>
+  <br><br><br><br><br>
+  <center>
+    <h2>H_Sync Schematic:</h2>
+    <img width="974" height="695"
+      src="https://cdn.discordapp.com/attachments/1078465752627155057/1079894115094888499/hsync.png">
+    <h2>V_Sync Schematic:</h2>
+    <img width="974" height="695"
+      src="https://cdn.discordapp.com/attachments/1078465752627155057/1087091994830053386/Vsync.png">
+    <h2>Main Schematic:</h2>
+    <img width="974" height="695"
+      src="https://cdn.discordapp.com/attachments/1078465752627155057/1087093628423372830/Schematic_turtlecard_2023-03-19.png">
+  </center>
+  <br><br><br><br><br>
+  <h3>Parts:</h3>
+  <br></br>
+  <center>
+    <table class="center">
+      <tr>
+        <th>Amount</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Description</th>
+      </tr>
+      <tr>
+        <th>x6</th>
+        <th>74LS161</th>
+        <th>5.34$ (0.89$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>used for the VGA timing</th>
+      </tr>
+      <tr>
+        <th>x8</th>
+        <th>74LS682</th>
+        <th>15.60$ (1.95$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>used for the VGA timing</th>
+      </tr>
+      <tr>
+        <th>x1</th>
+        <th>10Mhz Oscillator</th>
+        <th>2.35$ (2.35$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>sets the speed for the rest of the ICs</th>
+      </tr>
+      <tr>
+        <th>x1</th>
+        <th>74LS00</th>
+        <th>1.09$ (1.09$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>controls the VRAM</th>
+      </tr>
+      <tr>
+        <th>x1</th>
+        <th>SST39SF040-70-4C-PHE</th>
+        <th>3.91$ (3.91$ each from <a href="https://digikey.com">digikey.com</a>)</th>
+        <th>the VRAM</th>
+      </tr>
+      <tr>
+        <th>x3</th>
+        <th>Resistor 1.5K Ohm 1/4 Watt 5%</th>
+        <th>0.17$ (0.055$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>resistors to control color</th>
+      </tr>
+      <tr>
+        <th>x3</th>
+        <th>Resistor 680 Ohm 1/4 Watt 5%</th>
+        <th>0.17$ (0.055$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>resistors to control color</th>
+      </tr>
+      <tr>
+        <th>x1</th>
+        <th>74LS279</th>
+        <th>1.49$ (1.49$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>used for the VGA timing</th>
+      </tr>
+      <tr>
+        <th>x1</th>
+        <th>74LS04</th>
+        <th>0.89$ (0.89$ each from <a href="https://jameco.com">jameco.com</a>)</th>
+        <th>invert VGA timing signals</th>
+      </tr>
+    </table>
+  </center>
+  <br>
+  <table>
+    <tr>
+      <th>Total</th>
+    </tr>
+    <tr>
+      <th>31.01$</th>
+    </tr>
+  </table>
+</body>
+
+</html>
