--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <div class="content">
       <h2>Turtle Cards</h2>
       <button onclick="location.href='tc100x.html';">TurtleCard 100X<h4>31$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078465841961644052/floofo.jpg" width=270 height=350></button>
-      <button>TurtleCard 200X (unfinished)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078474182637129768/PXL_20230211_164327949_1.jpg" width=270 height=350>
-        <button class="dis">TurtleCard 210X (coming soon)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078477996723277884/computer_1.jpg" width=270 height=350>
+      <button>TurtleCard 150X (unfinished)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078474182637129768/PXL_20230211_164327949_1.jpg" width=270 height=350>
+        <button class="dis">TurtleCard 210X3D (coming soon)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078477996723277884/computer_1.jpg" width=270 height=350>
         <button class="dis">TurtleCard 220X3D (coming soon)<h4>?$</h4><img src="https://cdn.discordapp.com/attachments/1078465752627155057/1078477996723277884/computer_1.jpg" width=270 height=350>
       </button>
     </div>
